change the rsp desin

--- a/src/app/auth/auth.component.less
+++ b/src/app/auth/auth.component.less
@@ -136,6 +136,15 @@ body {
     right: 0;
 }
 
+@media screen and (max-width: 480px) {
+  #vidtop-content{
+      top: 15%;
+  }
+  .container{
+    background: rgba(216, 191, 162, 1) !important;
+  }
+}
+
 
 .nav-pills{
   li{
@@ -145,7 +154,7 @@ body {
 .container{
   width:320px;
   padding:0px;
-  background: rgba(216, 191, 162, 0.55);
+  background: rgba(216, 191, 162, 0.8);
   border-radius: 4px;
 }
 
