--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -7,13 +7,13 @@
 <div id="vidtop-content">
 <div class="container">
  <ul class="nav nav-pills">
-    <li class="active"><a data-toggle="pill" href="#home">Home</a></li>
-    <li><a data-toggle="pill" href="#menu1">Menu 1</a></li>
+    <li class="active"><a data-toggle="pill" href="#home">Login</a></li>
+    <li><a data-toggle="pill" href="#menu1">Register</a></li>
   </ul>
 
   <div class="tab-content">
     <div id="home" class="tab-pane fade in active">
-      <h3>HOME</h3>
+      <h3>Login</h3>
       <!--<div class="col-xs-10 col-xs-offset-1">
           <nz-input [nzType]="'text'" [nzPlaceHolder]="'Enter your userName'">
             <ng-template #prefix>
@@ -55,16 +55,16 @@
                 </label>
                 <a class="login-form-forgot" class="login-form-forgot">Forgot password</a>
                 <button nz-button class="login-form-button" [nzType]="'primary'" [nzSize]="'large'">Log in</button>
-                Or
-                <a data-toggle="pill" href="#menu1">register now!</a>
+                <!--Or
+                <a data-toggle="pill" href="#menu1">register now!</a>-->
               </div>
             </div>
           </form>
     </div>
     </div>
     <div id="menu1" class="tab-pane fade">
-      <h3>Menu 1</h3>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <h3>Register</h3>
+      <p>todo</p>
     </div>
   </div>
 </div>
