--- a/src/app/auth/auth.component.less
+++ b/src/app/auth/auth.component.less
@@ -161,12 +161,22 @@ nz-input{
   margin-bottom:10px;
 }
 
-    .login-form {
+.login-form {
       max-width: 300px;
-    }
-    .login-form-forgot {
+}
+.login-form-forgot {
       float: right;
-    }
-    .login-form-button {
+}
+.login-form-button {
       width: 100%;
-    }
+}
+
+.btn-google{
+	background-color: rgba(194,51,33,1);
+	width: 100%;
+	&:hover{
+		background-color: rgba(194,51,33,0.5);
+		color:white;
+	}
+	margin-bottom: 30px;
+}	
