--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -3,7 +3,7 @@
   <a (click)="closeNav()" [routerLink]="['/pages/about']" href="#">About</a>
   <a (click)="closeNav()" [routerLink]="['/pages/home']" href="#">Home</a>
   <a (click)="closeNav()" href="#">Clients</a>
-  <a (click)="closeNav()" href="#">Contact</a>
+  <a (click)="closeNav();authService.logout()">LogOut</a>
 </div>
 <div>
 <span [ngStyle]="{ 'margin-left': (opened? '71%':'0px') }"style="font-size:30px;cursor:pointer" (click)="openNav()">&#9776;</span>
